<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/primaryColor"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    android:paddingBottom="20dp"
    android:paddingTop="@dimen/nav_header_top_padding">

    <!-- App Logo -->
    <ImageView
        android:id="@+id/headerLogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/ic_launcher_foreground"
        android:scaleType="centerInside"
        android:contentDescription="@string/asthma_app_logo_description" />

    <!-- App Title -->
    <TextView
        android:id="@+id/headerTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingTop="6dp"
        android:text="@string/nav_header_title"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <!-- Subtitle -->
    <TextView
        android:id="@+id/headerSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingTop="2dp"
        android:text="@string/nav_header_subtitle"
        android:textColor="@color/fieldBackgroundColor"
        android:textSize="14sp" />

</LinearLayout>
